[feat] Update analysis as function type and enhance automation

--- a/main.ipynb
+++ b/main.ipynb
@@ -84,17 +84,65 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_core = pd.read_csv('data/preprocessed_data.csv')\n",
-    "df_core.rename(columns={'날짜': 'date'}, inplace=True)\n",
-    "df_core.set_index('date', inplace=True)\n",
-    "df_core"
+    "df_list = []\n",
+    "yr_list = [19, 20, 21, 22]\n",
+    "\n",
+    "for yr in yr_list:\n",
+    "    df = pd.read_csv(f'data/preprocessed/kau{str(yr)}.csv')\n",
+    "    df.rename(columns={'날짜': 'date'}, inplace=True)\n",
+    "    df.set_index('date', inplace=True)\n",
+    "    df.index = df.index.astype('datetime64[ns]')\n",
+    "    df_list.append(df)\n",
+    "\n",
+    "df_19, df_20, df_21, df_22 = df_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Divide kau19 and kau20 by year\n",
+    "df_19_pre = df_19[\n",
+    "    (df_19.index > pd.Timestamp('2018-12-31')) & (df_19.index < pd.Timestamp('2020-01-01'))\n",
+    "    ].rename(columns={'kau19':'kau19_19'})\n",
+    "df_19_post = df_19[\n",
+    "    (df_19.index > pd.Timestamp('2019-12-31')) & (df_19.index < pd.Timestamp('2021-01-01'))\n",
+    "    ].rename(columns={'kau19':'kau19_20'})\n",
+    "df_20_pre = df_20[\n",
+    "    (df_20.index > pd.Timestamp('2019-12-31')) & (df_20.index < pd.Timestamp('2021-01-01'))\n",
+    "    ].rename(columns={'kau20':'kau20_20'})\n",
+    "df_20_post = df_20[\n",
+    "    (df_20.index > pd.Timestamp('2020-12-31')) & (df_20.index < pd.Timestamp('2022-01-01'))\n",
+    "    ].rename(columns={'kau20':'kau20_21'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Simple check df kau 19\n",
+    "df_19_post"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Simple check df kau 20\n",
+    "df_20"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Analysis with VAR model"
+    "# Analysis with VAR and Granger Causality model"
    ]
   },
   {
@@ -103,59 +151,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mdl_var = VAR(df_core)\n",
-    "var_max_lag = 6\n",
-    "best_lag = mdl_var.select_order(var_max_lag)\n",
-    "best_lag.summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if best_lag.selected_orders['aic'] == 0:\n",
-    "    var_best_lag = var_max_lag\n",
-    "else:\n",
-    "    var_best_lag = best_lag.selected_orders['aic']\n",
+    "def var_analysis(df:pd.DataFrame, var_max_lag:int=12, print_summary=False, visualize=False):\n",
+    "    mdl_var = VAR(df)\n",
     "    \n",
-    "rslt_var = mdl_var.fit(var_best_lag)\n",
-    "rslt_var.summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "var_pval_tf_mat = rslt_var.pvalues.applymap(lambda x: True if x < 0.05 else False)\n",
-    "var_pval_tf_mat.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# plot - VAR model coefficients p-value\n",
-    "fig_var_pval, ax_var_pval = plt.subplots(1, 1, figsize=(4*var_best_lag, 6*var_best_lag))\n",
+    "    while True:\n",
+    "        try:\n",
+    "            best_lag_analysis = mdl_var.select_order(var_max_lag)\n",
+    "            break\n",
+    "        except:\n",
+    "            var_max_lag += -1\n",
+    "        \n",
     "\n",
-    "heat_pval = sns.heatmap(\n",
-    "    var_pval_tf_mat.T, \n",
-    "    square=True, \n",
-    "    ax=ax_var_pval, \n",
-    "    annot=True,\n",
-    "    annot_kws={'fontsize':20-var_best_lag}, \n",
-    "    cbar=False,\n",
-    "    linecolor='grey',\n",
-    "    linewidth=0.1,\n",
-    "    )\n",
-    "heat_pval.set_xticklabels(heat_pval.get_xticklabels(), fontsize=12)\n",
-    "heat_pval.set_yticklabels(heat_pval.get_yticklabels(), fontsize=12)\n",
-    "ax_var_pval.set_title('Statistical significances of VAR coefficients by p-values', fontsize=15, family='bold')"
+    "    if best_lag_analysis.selected_orders['aic'] == 0:\n",
+    "        best_lag = var_max_lag\n",
+    "    else:\n",
+    "        best_lag = best_lag_analysis.selected_orders['aic']\n",
+    "        \n",
+    "    rslt_var = mdl_var.fit(best_lag)\n",
+    "    if print_summary:\n",
+    "        print(rslt_var.summary())\n",
+    "\n",
+    "    var_pval_tf_mat = rslt_var.pvalues.applymap(lambda x: True if x < 0.05 else False)\n",
+    "\n",
+    "    # plot - VAR model coefficients p-value\n",
+    "    if visualize:\n",
+    "        fig_var_pval, ax_var_pval = plt.subplots(1, 1, figsize=(max(4*best_lag, 8), max(6*best_lag, 12)))\n",
+    "\n",
+    "        heat_pval = sns.heatmap(\n",
+    "            var_pval_tf_mat, \n",
+    "            square=True, \n",
+    "            ax=ax_var_pval, \n",
+    "            annot=True,\n",
+    "            annot_kws={'fontsize':15-best_lag}, \n",
+    "            cbar=False,\n",
+    "            linecolor='grey',\n",
+    "            linewidth=0.1,\n",
+    "            )\n",
+    "        heat_pval.set_xticklabels(heat_pval.get_xticklabels(), fontsize=12)\n",
+    "        heat_pval.set_yticklabels(heat_pval.get_yticklabels(), fontsize=12)\n",
+    "        ax_var_pval.set_title(\n",
+    "            'Statistical significances of VAR coefficients by p-values', \n",
+    "            fontsize=15, weight='bold')\n",
+    "\n",
+    "        fig_var_pval.tight_layout()\n",
+    "\n",
+    "    return rslt_var, var_pval_tf_mat\n",
+    "\n",
+    "rslt, tf_mat = var_analysis(df_20)"
    ]
   },
   {
@@ -165,40 +207,80 @@
    "outputs": [],
    "source": [
     "# Analyze causality between two time series variables with Granger Causality Test\n",
-    "selc_granger_test = [ \n",
-    "    # (feature x, feature y, time_lag)\n",
-    "    ('carbon_credit', 'natural_gas', 5),\n",
-    "    ('brent_crude_future', 'kospi', 1)\n",
-    "]\n",
+    "def granger_analysis(df: pd.DataFrame, additional_component: list=None, print_analysis_result=False):\n",
+    "    \"\"\"\n",
+    "    additional_component must be a shape of\n",
+    "    (feature x, feature y, time_lag)\n",
+    "    \"\"\"\n",
+    "    # Get p-value significance matrix\n",
+    "    tf_mat = var_analysis(df, print_summary=False)[1]\n",
     "\n",
-    "df_gct = pd.DataFrame(\n",
-    "    index=[x[0] for x in selc_granger_test]+[x[1] for x in selc_granger_test],\n",
-    "    columns=[x[0] for x in selc_granger_test]+[x[1] for x in selc_granger_test],\n",
-    "    dtype='object',\n",
-    "    )\n",
-    "df_gct = df_gct.applymap(lambda x: pd.Series(index=np.arange(1, var_max_lag+1), dtype='object'))\n",
-    "df_gct.index.name='cause'\n",
-    "df_gct.columns.name='effect'\n",
+    "    selc_granger_test = []\n",
+    "    main_col = tf_mat.columns[0]\n",
+    "    for sig_col_info in tf_mat[tf_mat[main_col]==True].index.to_list():\n",
+    "        lag, col = sig_col_info.split('.')\n",
+    "        lag = lag[1:]\n",
+    "        if col == main_col:\n",
+    "            continue # Ignore autocorrelation\n",
+    "        else:\n",
+    "            selc_granger_test.append((main_col, col, int(lag)))\n",
     "\n",
-    "for factor_x, factor_y, time_lag in selc_granger_test:\n",
-    "    # factor x -> factor y\n",
-    "    print(f'\\n[{factor_x}][t-{time_lag}] -> [{factor_y}][t]', end='')\n",
-    "    df_gct.loc[factor_x, factor_y][time_lag] = grangercausalitytests(\n",
-    "        df_core[[factor_y, factor_x]],\n",
-    "        maxlag=[time_lag],\n",
-    "        verbose=1\n",
-    "    )\n",
+    "    if print_analysis_result:\n",
+    "        verbose = 1\n",
+    "    else:\n",
+    "        verbose = 0\n",
+    "    \n",
+    "    # Granger Causality Test\n",
+    "    col_nms = list(set([x[0] for x in selc_granger_test]+[x[1] for x in selc_granger_test]))\n",
     "\n",
-    "    # factor y -> factor x\n",
-    "    print(f'\\n[{factor_y}][t-{time_lag}] -> [{factor_x}][t]', end='')\n",
-    "    df_gct.loc[factor_y, factor_x][time_lag] = grangercausalitytests(\n",
-    "        df_core[[factor_x, factor_y]],\n",
-    "        maxlag=[time_lag],\n",
-    "        verbose=1\n",
+    "    df_gct = pd.DataFrame(\n",
+    "        index=col_nms,\n",
+    "        columns=col_nms,\n",
+    "        dtype='object',\n",
+    "        )\n",
+    "    df_gct = df_gct.applymap(\n",
+    "        lambda x: pd.Series(index=np.arange(1, int(tf_mat.index[-1].split('.')[0][1:])+1), dtype='object'))\n",
+    "    df_gct.index.name='cause'\n",
+    "    df_gct.columns.name='effect'\n",
+    "\n",
+    "    for factor_x, factor_y, time_lag in selc_granger_test:\n",
+    "        # factor x -> factor y\n",
+    "        if print_analysis_result:\n",
+    "            print(f'\\n[{factor_x}][t-{time_lag}] -> [{factor_y}][t]', end='')\n",
+    "        df_gct.loc[factor_x, factor_y][time_lag] = grangercausalitytests(\n",
+    "            df[[factor_y, factor_x]],\n",
+    "            maxlag=[time_lag],\n",
+    "            verbose=verbose,\n",
     "        )\n",
     "\n",
+    "        # factor y -> factor x\n",
+    "        if print_analysis_result:\n",
+    "            print(f'\\n[{factor_y}][t-{time_lag}] -> [{factor_x}][t]', end='')\n",
+    "        df_gct.loc[factor_y, factor_x][time_lag] = grangercausalitytests(\n",
+    "            df[[factor_x, factor_y]],\n",
+    "            maxlag=[time_lag],\n",
+    "            verbose=verbose,\n",
+    "            )\n",
+    "    \n",
+    "    return df_gct\n",
     "\n",
-    "df_gct"
+    "granger_analysis(df_20, print_analysis_result=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def var_n_granger(df, print_var_summary=False, viz_var_pval=False, print_granger_result=False):\n",
+    "    rslt_var, tf_mat = var_analysis(df, print_summary=print_var_summary, visualize=viz_var_pval)\n",
+    "    df_gct = granger_analysis(df, print_analysis_result=print_granger_result)\n",
+    "\n",
+    "    return rslt_var, tf_mat, df_gct\n",
+    "\n",
+    "for df in [df_19_pre, df_19_post, df_20_pre, df_20_post]:\n",
+    "    var_n_granger(df, print_var_summary=False, viz_var_pval=True, print_granger_result=True)\n"
    ]
   }
  ],
