[fix] Fix value error of granger_analysis function
Cause: Constant has no time lag
Fix: Ignore constant

--- a/main.ipynb
+++ b/main.ipynb
@@ -217,7 +217,10 @@
     "\n",
     "    selc_granger_test = []\n",
     "    main_col = tf_mat.columns[0]\n",
+    "\n",
     "    for sig_col_info in tf_mat[tf_mat[main_col]==True].index.to_list():\n",
+    "        if sig_col_info == 'const':\n",
+    "            continue\n",
     "        lag, col = sig_col_info.split('.')\n",
     "        lag = lag[1:]\n",
     "        if col == main_col:\n",
@@ -264,7 +267,7 @@
     "    \n",
     "    return df_gct\n",
     "\n",
-    "granger_analysis(df_20, print_analysis_result=True)"
+    "# granger_analysis(df_20_pre, print_analysis_result=False)"
    ]
   },
   {
@@ -280,7 +283,7 @@
     "    return rslt_var, tf_mat, df_gct\n",
     "\n",
     "for df in [df_19_pre, df_19_post, df_20_pre, df_20_post]:\n",
-    "    var_n_granger(df, print_var_summary=False, viz_var_pval=True, print_granger_result=True)\n"
+    "    var_n_granger(df, print_var_summary=False, viz_var_pval=True, print_granger_result=True)"
    ]
   }
  ],
