[feat] [feat] Change default VAR lag selection as non automatical
Before: Automatical best lag selection for VAR max time lag
After: Automatical selection is an option

--- a/main.ipynb
+++ b/main.ipynb
@@ -151,7 +151,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def var_analysis(df:pd.DataFrame, var_max_lag:int=12, print_summary=False, visualize=False):\n",
+    "def var_analysis(df:pd.DataFrame, var_max_lag:int=5, print_summary=False, visualize=False,\n",
+    "auto_lag_select=False):\n",
     "    mdl_var = VAR(df)\n",
     "    \n",
     "    while True:\n",
@@ -161,12 +162,14 @@
     "        except:\n",
     "            var_max_lag += -1\n",
     "        \n",
-    "\n",
-    "    if best_lag_analysis.selected_orders['aic'] == 0:\n",
-    "        best_lag = var_max_lag\n",
+    "    if auto_lag_select:\n",
+    "        if best_lag_analysis.selected_orders['aic'] == 0:\n",
+    "            best_lag = var_max_lag\n",
+    "        else:\n",
+    "            best_lag = best_lag_analysis.selected_orders['aic']\n",
     "    else:\n",
-    "        best_lag = best_lag_analysis.selected_orders['aic']\n",
-    "        \n",
+    "        best_lag = var_max_lag\n",
+    "\n",
     "    rslt_var = mdl_var.fit(best_lag)\n",
     "    if print_summary:\n",
     "        print(rslt_var.summary())\n",
@@ -197,7 +200,7 @@
     "\n",
     "    return rslt_var, var_pval_tf_mat\n",
     "\n",
-    "rslt, tf_mat = var_analysis(df_20)"
+    "# rslt, tf_mat = var_analysis(df_20)"
    ]
   },
   {
@@ -282,8 +285,11 @@
     "\n",
     "    return rslt_var, tf_mat, df_gct\n",
     "\n",
-    "for df in [df_19_pre, df_19_post, df_20_pre, df_20_post]:\n",
-    "    var_n_granger(df, print_var_summary=False, viz_var_pval=True, print_granger_result=True)"
+    "# for df in [df_19_pre, df_19_post, df_20_pre, df_20_post]:\n",
+    "    # var_n_granger(df, print_var_summary=True, viz_var_pval=False, print_granger_result=False)\n",
+    "\n",
+    "# for df in [df_19, df_20]:\n",
+    "#     var_n_granger(df, print_var_summary=False, viz_var_pval=True, print_granger_result=True)"
    ]
   }
  ],
