[feat] Change analysis timeline
Before
	- Yr 2019 ~ 2022 for KAU19, KAU20, KAU21
After
	- Yr 2019 ~ 2021 for KAU19, KAU20

--- a/main.ipynb
+++ b/main.ipynb
@@ -85,7 +85,7 @@
    "outputs": [],
    "source": [
     "df_list = []\n",
-    "yr_list = [19, 20, 21, 22]\n",
+    "yr_list = [19, 20]\n",
     "\n",
     "for yr in yr_list:\n",
     "    df = pd.read_csv(f'data/preprocessed/kau{str(yr)}.csv')\n",
@@ -94,7 +94,7 @@
     "    df.index = df.index.astype('datetime64[ns]')\n",
     "    df_list.append(df)\n",
     "\n",
-    "df_19, df_20, df_21, df_22 = df_list"
+    "df_19, df_20 = df_list"
    ]
   },
   {
@@ -204,6 +204,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### <span style=\"color:#ffd33d\">**Warning**</span>\n",
+    "> Granger causality test can only provide 'Granger Causality' not the causality   \n",
+    "Thus, it would be stretching a point to use Granger causality test as proof of general causality between two time series variables."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Granger Causality Test Structure**\n",
+    "|Model Category|Regression Formula|Coefficients|Walt Test|\n",
+    "|:---|---:|---:|---:|\n",
+    "|Restricted|$$y_t = c_1 + \\sum_{i=1}^{p}\\alpha_{1,i}\\ y_{t-i} + \\epsilon_{1, t},\\\\ where\\ p\\ is\\ time\\ lag$$|$$\\beta_{1}=\\beta_{2}=\\beta_{3}=0$$|Null hypothesis|\n",
+    "|Unrestricted|$$y_t = c_2 + \\sum_{i=1}^{p}\\alpha_{2,i}\\ y_{t-i} + \\sum_{i=1}^{p}\\beta_{i}\\ x_{t-i} + \\epsilon_{2, t},\\\\ where\\ p\\ is\\ time\\ lag$$|$$At\\ least\\ one\\ of\\\\ \\beta_{1},\\ \\beta_{2},\\ \\beta_{3}\\ is\\ not\\ 0$$|Alternative hypothesis|\n",
+    "***"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -285,11 +306,8 @@
     "\n",
     "    return rslt_var, tf_mat, df_gct\n",
     "\n",
-    "# for df in [df_19_pre, df_19_post, df_20_pre, df_20_post]:\n",
-    "    # var_n_granger(df, print_var_summary=True, viz_var_pval=False, print_granger_result=False)\n",
-    "\n",
-    "# for df in [df_19, df_20]:\n",
-    "#     var_n_granger(df, print_var_summary=False, viz_var_pval=True, print_granger_result=True)"
+    "for df in [df_19_pre, df_19_post, df_20_pre, df_20_post]:\n",
+    "    var_n_granger(df, print_var_summary=True, viz_var_pval=True, print_granger_result=True)"
    ]
   }
  ],
