--- a/eda.ipynb
+++ b/eda.ipynb
@@ -17,7 +17,6 @@
     "import numpy as np\n",
     "import os\n",
     "import matplotlib as mpl\n",
-    "import yfinance as yf\n",
     "import seaborn as sns\n",
     "import missingno as msno\n",
     "import warnings\n",
@@ -115,31 +114,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load several index information by yfinance\n",
-    "snp500 = yf.Ticker('^GSPC')\n",
-    "snp500.history(period='max')\n",
-    "\n",
     "# Get carbon credit data\n",
     "path_kau19 = 'data/external_data/KAU19-22/KAU19.csv'\n",
     "path_kau20 = 'data/external_data/KAU19-22/KAU20.csv'\n",
-    "path_kau21 = 'data/external_data/KAU19-22/KAU21.csv'\n",
-    "path_kau22 = 'data/external_data/KAU19-22/KAU22.csv'\n",
     "\n",
     "# Get data path from local directory\n",
     "path_brent_crude_future = 'data/external_data/Features/브렌트유 선물 내역.csv'\n",
-    "path_wti_crude_future = 'data/external_data/Features/WTI유 선물 내역.csv'\n",
     "path_natural_gas = 'data/external_data/Features/천연가스 선물 내역.csv'\n",
-    "path_kospi = 'data/external_data/Features/코스피19-22.csv'\n",
-    "path_kosdaq = 'data/external_data/Features/코스닥19-22.csv'\n",
-    "path_eur_krw = 'data/external_data/Features/EUR_KRW 내역.csv'\n",
+    "path_iron = 'data/external_data/Features/철광석 내역.csv'\n",
+    "path_coal_future = 'data/external_data/Features/Newcastle Coal Futures 내역.csv'\n",
     "path_usd_krw = 'data/external_data/Features/USD_KRW 내역.csv'\n",
-    "path_gold = 'data/external_data/Features/금 선물 내역.csv'\n",
-    "path_usa_corn = 'data/external_data/Features/미국 옥수수 선물 내역.csv'\n",
-    "path_nikkei = 'data/external_data/Features/닛케이19-22.csv'\n",
-    "path_dax = 'data/external_data/Features/독일DAX19-22.csv'\n",
-    "path_moex = 'data/external_data/Features/러시아MOEX19-22.csv'\n",
-    "path_cac = 'data/external_data/Features/프랑스CAC19-22.csv'\n",
-    "path_treasury_yield = 'data/external_data/Features/미국 10년물 국채 금리 채권 수익율 내역.csv'"
+    "path_wti_crude_future = 'data/external_data/Features/WTI유 선물 내역.csv'"
    ]
   },
   {
@@ -151,24 +136,14 @@
     "# Load carbon credit dataset\n",
     "df_kau19 = pd.read_csv(path_kau19, encoding='euc-kr', index_col=0)\n",
     "df_kau20 = pd.read_csv(path_kau20, encoding='euc-kr', index_col=0)\n",
-    "df_kau21 = pd.read_csv(path_kau21, encoding='euc-kr', index_col=0)\n",
-    "df_kau22 = pd.read_csv(path_kau22, encoding='euc-kr', index_col=0)\n",
     "\n",
     "# Load dataset\n",
     "df_brent_crude_fut = pd.read_csv(path_brent_crude_future).dropna()\n",
-    "df_wti_crude_fut = pd.read_csv(path_wti_crude_future).dropna()\n",
     "df_natural_gas = pd.read_csv(path_natural_gas).dropna()\n",
-    "df_kospi = pd.read_csv(path_kospi, encoding='euc-kr').dropna()\n",
-    "df_kosdaq = pd.read_csv(path_kosdaq, encoding='euc-kr').dropna()\n",
-    "df_eur_krw = pd.read_csv(path_eur_krw).dropna()\n",
+    "df_iron = pd.read_csv(path_iron, encoding='utf-8').dropna()\n",
+    "df_coal_fut = pd.read_csv(path_coal_future, encoding='utf-8').dropna()\n",
     "df_usd_krw = pd.read_csv(path_usd_krw).dropna()\n",
-    "df_gold = pd.read_csv(path_gold).dropna()\n",
-    "df_usa_corn = pd.read_csv(path_usa_corn).dropna()\n",
-    "df_nikkei = pd.read_csv(path_nikkei, encoding='euc-kr').dropna()\n",
-    "df_dax = pd.read_csv(path_dax, encoding='euc-kr').dropna()\n",
-    "df_moex = pd.read_csv(path_moex, encoding='euc-kr').dropna()\n",
-    "df_cac = pd.read_csv(path_cac, encoding='euc-kr').dropna()\n",
-    "df_treasury_yield = pd.read_csv(path_treasury_yield).dropna()"
+    "df_wti_crude_fut = pd.read_csv(path_wti_crude_future).dropna()"
    ]
   },
   {
@@ -207,23 +182,13 @@
     "# Simple dtype change : date to datetime & Close price comma fix\n",
     "df_kau19 = dtype_chg(df_kau19)\n",
     "df_kau20 = dtype_chg(df_kau20)\n",
-    "df_kau21 = dtype_chg(df_kau21)\n",
-    "df_kau22 = dtype_chg(df_kau22)\n",
     "\n",
     "df_brent_crude_fut = dtype_chg(df_brent_crude_fut)\n",
-    "df_wti_crude_fut = dtype_chg(df_wti_crude_fut)\n",
     "df_natural_gas = dtype_chg(df_natural_gas)\n",
-    "df_kospi = dtype_chg(df_kospi)\n",
-    "df_kosdaq = dtype_chg(df_kosdaq)\n",
-    "df_eur_krw = dtype_chg(df_eur_krw)\n",
+    "df_iron = dtype_chg(df_iron)\n",
+    "df_coal_fut = dtype_chg(df_coal_fut)\n",
     "df_usd_krw = dtype_chg(df_usd_krw)\n",
-    "df_gold = dtype_chg(df_gold)\n",
-    "df_usa_corn = dtype_chg(df_usa_corn)\n",
-    "df_nikkei = dtype_chg(df_nikkei)\n",
-    "df_dax = dtype_chg(df_dax)\n",
-    "df_moex = dtype_chg(df_moex)\n",
-    "df_cac = dtype_chg(df_cac)\n",
-    "df_treasury_yield = dtype_chg(df_treasury_yield)"
+    "df_wti_crude_fut = dtype_chg(df_wti_crude_fut)"
    ]
   },
   {
@@ -237,44 +202,24 @@
     "    [\n",
     "        df_kau19['종가'],\n",
     "        df_kau20['종가'],\n",
-    "        df_kau21['종가'],\n",
-    "        df_kau22['종가'],\n",
     "        df_brent_crude_fut['종가'],\n",
-    "        df_wti_crude_fut['종가'],\n",
     "        df_natural_gas['종가'],\n",
-    "        df_kospi['종가'],\n",
-    "        df_kosdaq['종가'],\n",
-    "        df_eur_krw['종가'],\n",
+    "        df_iron['종가'],\n",
+    "        df_coal_fut['종가'],\n",
     "        df_usd_krw['종가'],\n",
-    "        df_gold['종가'],\n",
-    "        df_usa_corn['종가'],\n",
-    "        df_nikkei['종가'],\n",
-    "        df_dax['종가'],\n",
-    "        df_moex['종가'],\n",
-    "        df_cac['종가'],\n",
-    "        df_treasury_yield['종가'],\n",
+    "        df_wti_crude_fut['종가'],\n",
     "],\n",
     "axis=1)\n",
     "\n",
     "tot_col_nm = [\n",
     "        'kau19',\n",
     "        'kau20',\n",
-    "        'kau21',\n",
-    "        'kau22',\n",
     "        'brent_crude_fut',\n",
-    "        'wti_crude_fut',\n",
     "        'natural_gas',\n",
-    "        'kospi',\n",
-    "        'kosdaq',\n",
-    "        'eur_krw',\n",
+    "        'iron',\n",
+    "        'coal_fut',\n",
     "        'usd_krw',\n",
-    "        'gold',\n",
-    "        'usa_corn',\n",
-    "        'nikkei',\n",
-    "        'dax',\n",
-    "        'moex',\n",
-    "        'cac',\n",
-    "        'treasury_yield',\n",
+    "        'wti_crude_fut',\n",
     "    ]\n",
     "\n",
     "df_tot.columns = tot_col_nm\n",
@@ -290,10 +235,8 @@
    "outputs": [],
    "source": [
     "# Split total DataFrame by KAU\n",
-    "df_19 = df_tot.drop(columns=['kau20', 'kau21', 'kau22'])\n",
-    "df_20 = df_tot.drop(columns=['kau19', 'kau21', 'kau22'])\n",
-    "df_21 = df_tot.drop(columns=['kau19', 'kau20', 'kau22'])\n",
-    "df_22 = df_tot.drop(columns=['kau19', 'kau20', 'kau21'])"
+    "df_19 = df_tot.drop(columns=['kau20'])\n",
+    "df_20 = df_tot.drop(columns=['kau19'])"
    ]
   },
   {
@@ -304,9 +247,7 @@
    "source": [
     "# Weekly temporal smoothing\n",
     "df_19 = df_19.resample('w').mean()\n",
-    "df_20 = df_20.resample('w').mean()\n",
-    "df_21 = df_21.resample('w').mean()\n",
-    "df_22 = df_22.resample('w').mean()"
+    "df_20 = df_20.resample('w').mean()"
    ]
   },
   {
@@ -317,9 +258,7 @@
    "source": [
     "# Assign temporal restricition\n",
     "df_19 = df_19[(df_19.index > pd.Timestamp('2018-12-31')) & (df_19.index < pd.Timestamp('2021-01-01'))]\n",
-    "df_20 = df_20[(df_20.index > pd.Timestamp('2019-12-31')) & (df_20.index < pd.Timestamp('2022-01-01'))]\n",
-    "df_21 = df_21[(df_21.index > pd.Timestamp('2020-12-31')) & (df_21.index < pd.Timestamp('2023-01-01'))]\n",
-    "df_22 = df_22[(df_22.index > pd.Timestamp('2021-12-31')) & (df_22.index < pd.Timestamp('2024-01-01'))]"
+    "df_20 = df_20[(df_20.index > pd.Timestamp('2019-12-31')) & (df_20.index < pd.Timestamp('2022-01-01'))]"
    ]
   },
   {
@@ -356,9 +295,7 @@
     "    return df_fill_n_drop\n",
     "\n",
     "df_19 = fill_missing_and_visualize(df_19, 'KAU-19')\n",
-    "df_20 = fill_missing_and_visualize(df_20, 'KAU-20')\n",
-    "df_21 = fill_missing_and_visualize(df_21, 'KAU-21')\n",
-    "df_22 = fill_missing_and_visualize(df_22, 'KAU-22')"
+    "df_20 = fill_missing_and_visualize(df_20, 'KAU-20')"
    ]
   },
   {
@@ -377,7 +314,7 @@
     "        figsize=(2*int(np.ceil(num_col*2/3)), 4*int(np.ceil(num_col*1/3))),\n",
     "        )\n",
     "\n",
-    "for df in [df_19, df_20, df_21, df_22]:\n",
+    "for df in [df_19, df_20]:\n",
     "    viz_line_by_col(df)"
    ]
   },
@@ -402,9 +339,7 @@
     "    return df_log_transformed\n",
     "\n",
     "df_19 = log_transform_n_viz(df_19)\n",
-    "df_20 = log_transform_n_viz(df_20)\n",
-    "df_21 = log_transform_n_viz(df_21)\n",
-    "df_22 = log_transform_n_viz(df_22)"
+    "df_20 = log_transform_n_viz(df_20)"
    ]
   },
   {
@@ -443,7 +378,7 @@
     "\n",
     "    fig_lag_plot.tight_layout()\n",
     "\n",
-    "for df in [df_19, df_20, df_21, df_22]:\n",
+    "for df in [df_19, df_20]:\n",
     "    viz_stationarity_check(df)"
    ]
   },
@@ -455,9 +390,7 @@
    "source": [
     "# Difference total DataFrame\n",
     "df_19 = df_19.diff().dropna()\n",
-    "df_20 = df_20.diff().dropna()\n",
-    "df_21 = df_21.diff().dropna()\n",
-    "df_22 = df_22.diff().dropna()"
+    "df_20 = df_20.diff().dropna()"
    ]
   },
   {
@@ -467,7 +400,7 @@
    "outputs": [],
    "source": [
     "# plot - Check data by simple line plot\n",
-    "for df in [df_19, df_20, df_21, df_22]:\n",
+    "for df in [df_19, df_20]:\n",
     "    viz_line_by_col(df)"
    ]
   },
@@ -484,8 +417,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfs = [df_19, df_20, df_21, df_22]\n",
-    "df_nms = ['kau19', 'kau20', 'kau21', 'kau22']\n",
+    "dfs = [df_19, df_20]\n",
+    "df_nms = ['kau19', 'kau20']\n",
     "\n",
     "for df, df_nm in zip(dfs, df_nms):\n",
     "    df.to_csv(f'data/preprocessed/{df_nm}.csv')"
