[feat] Add observation and discussion
Add observation and discussion of analysis with VAR, Granger model for
four DataFrame (kau19_pre, kau19_post, kau20_pre, kau20_post)

--- a/main.ipynb
+++ b/main.ipynb
@@ -309,6 +309,24 @@
     "for df in [df_19_pre, df_19_post, df_20_pre, df_20_post]:\n",
     "    var_n_granger(df, print_var_summary=True, viz_var_pval=True, print_granger_result=True)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Observation and Discussion\n",
+    "\n",
+    "1. KAU19 showed significant relation with several features. Especially, 3 and 5 week time lag were stand out\n",
+    "    - USD-KRW exchange rate showed distinguished Granger causality. If the exchange rate rose (or fell), the KAU19 tended to rise (or fall) three and five weeks later <br/><br/>    \n",
+    "2. The relations between KAU19 and several features in 2019 disappeared in 2020\n",
+    "    - The number of significant relation between KAU19 and economic features decreased from 5 in 2019 to 1. The decline in global production due to COVID-19 is suspected to be an exogenous factor in this decrease <br/><br/>\n",
+    "3. KAU20 in 2020 showed a similar pattern to the KAU19 in 2020\n",
+    "    - It is suspected that overall structure of KAU in the market has changed  \n",
+    "    - It is remarkerable that the natural gas future maintained a significant relationship with KAU for a relatively longer period than crude oil and coal <br/><br/>\n",
+    "4. Australian Newcastle coal future, which did not show a significant relationship with KAU until 2020, first showed a significant relationship with KAU20 in 2021\n",
+    "    - Considering that crude oil in 2019 → natural gas 2020 → coal in 2021 was closely related to KAU, it is difficult to say that KAU is deeply related to only one fossil fuel\n",
+    "    - USD-KRW exchange rate only showed a significant relationship with KAU in 2019 when the crude oil was related to KAU. This suggests that further analysis of the relationship between KAU and the Petro-Dollar system is needed"
+   ]
   }
  ],
  "metadata": {
